address issue of nav align error

--- a/css/style.css
+++ b/css/style.css
@@ -240,12 +240,7 @@ header {
     height: 65px;
 }
 
-nav a {
-  float: left;
-}
 nav ul {
-  float: right;
-
     display: inline-block;
     padding-left: 0;
     list-style: none;
@@ -264,7 +259,7 @@ nav li a {
     text-transform: uppercase;
     letter-spacing: 2px;
     color: #444;
-    font-size: 16px;
+    font-size: 12px;
     font-weight: bold;
 }
 
